cart-button: fix styles on mobile
on mobile devices there were some distances that didn't need to be that
big

--- a/src/themes/default/confirmationPage/index.css
+++ b/src/themes/default/confirmationPage/index.css
@@ -41,5 +41,11 @@
 
   .page {
     background-color: transparent;
+    margin: var(--spacing-medium) 0 0 0;
+    padding:
+      var(--spacing-small)
+      var(--spacing-small)
+      0
+      var(--spacing-small);
   }
 }
